@@ -4,8 +4,9 @@ glib2.0 (2.12.11-3) UNRELEASED; urgency=medium
     configure, doh!
   * Track all stable versions in watch file.
   * Wrap build-deps and deps.
+  * Add ${misc:Depends}.
 
- -- Loic Minier <lool@dooz.org>  Thu, 12 Apr 2007 15:54:19 +0200
+ -- Loic Minier <lool@dooz.org>  Thu, 12 Apr 2007 15:55:49 +0200
 
 glib2.0 (2.12.11-2) unstable; urgency=low
 
